=== HEAD

* Support rename_column, set_column_null, set_column_type, and add_foreign_key on H2 (jeremyevans)

* Support adding a column with a primary key or unique constraint to an existing table on SQLite (jeremyevans)

* Support altering a column's type, null status, or default on SQLite (jeremyevans)

* Fix renaming a NOT NULL column without a default on MySQL (nougad, jeremyevans) (#273)

* Don't swallow DatabaseConnectionErrors when creating model subclasses (tommy.midttveit)

=== 3.2.0 (2009-07-02)

* In the STI plugin, don't overwrite the STI field if it is already set (jeremyevans)

* Add support for Common Table Expressions, which use the SQL WITH clause (jeremyevans)

* Add SQL::WindowFunction, expand virtual row blocks to support them and other constructions (jeremyevans)

* Add Model#autoincrementing_primary_key, for when the autoincrementing key isn't the same as the primary key (jeremyevans)

* Add Dataset#ungraphed, to remove the splitting of results into subhashes or associated records (jeremyevans)
 
* Support :opclass option for PostgreSQL indexes (tmi, jeremyevans)

* Make parsing of server's version more reliable for PostgreSQL (jeremyevans)

* Add Dataset#qualify, which is qualify_to with a first_source default (jeremyevans)

* Add :ruby_default to parsed schema information, which contains a ruby object representing the database default (jeremyevans)

* Fix changing a column's name, type, or null status on MySQL when column has a string default (jeremyevans)

* Remove Dataset#to_table_reference protected method, no longer used (jeremyevans)

* Fix thread-safety issue in stored procedure code (jeremyevans)

* Remove SavepointTransactions module, integrate into Database code (jeremyevans)

* Add supports_distinct_on? method (jeremyevans)

* Remove SQLStandardDateFormat, replace with requires_sql_standard_datetimes? method (jeremyevans)

* Remove UnsupportedIsTrue module, replace with supports_is_true? method (jeremyevans)
